force-app/main/default/objects/Opportunity/fields/Actual_Kickoff_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Kickoff_Meeting_Date__c</fullName>
    <description>The date the meeting was completed as per completed task</description>
    <inlineHelpText>The date the meeting was completed. Entering a date will automatically advance this opportunity to the next stage.</inlineHelpText>
    <label>Actual Kickoff Meeting Date</label>
    <type>Date</type>
</CustomField>