force-app/main/default/objects/Opportunity/fields/Actuator__c.field-meta.xml
<CustomField>
    <fullName>Actuator__c</fullName>
    <label>Actuator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air Cylinder</fullName>
            </value>
            <value>
                <fullName>Bevel Gear</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Hand Wheel</fullName>
            </value>
            <value>
                <fullName>Hydraulic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>