force-app/main/default/objects/Opportunity/fields/ApplicationCircuit__c.field-meta.xml
<CustomField>
    <fullName>ApplicationCircuit__c</fullName>
    <businessOwnerUser>mikew@welco.ca.traintest</businessOwnerUser>
    <description>Describes the location or circuit the equipment is in within the facility or plant as requested by MW</description>
    <inlineHelpText>Describe the location, application or circuit the equipment is in within the facility or plant.</inlineHelpText>
    <label>Application/Circuit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>