force-app/main/default/objects/Opportunity/fields/Assigned_Inside_Sales__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Inside_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Inside Sales</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>