force-app/main/default/objects/Opportunity/fields/Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Category_Code__c</fullName>
    <description>Tracks Opportunity Codes based off of Adagio System codes</description>
    <label>Category Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Supplier__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Category_Code</valueSetName>
    </valueSet>
</CustomField>