force-app/main/default/objects/Opportunity/fields/Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason__c</fullName>
    <description>Tracks the reason the opportunity closed</description>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost - Competitor</fullName>
                <color>#FF0000</color>
                <label>Lost - Competitor Product/Service</label>
            </value>
            <value>
                <fullName>Lost - No Response from CustomerExpired</fullName>
                <color>#FF0000</color>
                <label>Lost - No Response from Customer/Expired</label>
            </value>
            <value>
                <fullName>Lost - No Response from Supplier</fullName>
                <color>#FF0000</color>
                <label>Lost - No Response from Supplier</label>
            </value>
            <value>
                <fullName>Lost - PriceBudget Constraints</fullName>
                <color>#FF0000</color>
                <label>Lost - Price/Budget Constraints</label>
            </value>
            <value>
                <fullName>Lost - Project AbandonmentClosed</fullName>
                <color>#FF0000</color>
                <label>Lost - Project Abandonment/Closed</label>
            </value>
            <value>
                <fullName>Out of Scope</fullName>
                <color>#FF0000</color>
                <label>Lost - Project Out of Scope</label>
            </value>
            <value>
                <fullName>Lost - ShippingLead Time</fullName>
                <color>#FF0000</color>
                <label>Lost - Shipping/Lead Time</label>
            </value>
            <value>
                <fullName>Won - Competitive Pricing</fullName>
                <color>#33CC00</color>
                <label>Won - Competitive Pricing</label>
            </value>
            <value>
                <fullName>Won - Shipping/Lead Time</fullName>
                <color>#33CC00</color>
                <label>Won - Shipping/Lead Time</label>
            </value>
            <value>
                <fullName>Won - Best Solution</fullName>
                <color>#33CC00</color>
                <label>Won - Best Solution</label>
            </value>
            <value>
                <fullName>Won - Loyalty</fullName>
                <color>#33CC00</color>
                <label>Won - Loyalty</label>
            </value>
            <value>
                <fullName>Won - Repair Replacement</fullName>
                <color>#00CCCC</color>
                <label>Won - Repair Replacement</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Lost-Lack of Followup</fullName>
                <isActive>false</isActive>
                <label>Lost-Lack of Followup</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>