force-app/main/default/objects/Opportunity/fields/Close_Reason_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason_Explanation__c</fullName>
    <description>Text field used to provide additional details on closed opportunities</description>
    <inlineHelpText>Describe in detail why the opportunity closed.</inlineHelpText>
    <label>Close Reason Explanation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>