force-app/main/default/objects/Opportunity/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <inlineHelpText>If Competitor Replacement is selected above, please select the competitor for the equipment we are replacing.</inlineHelpText>
    <label>Equipment Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allis-Chalmers</fullName>
            </value>
            <value>
                <fullName>Clarkson</fullName>
            </value>
            <value>
                <fullName>Conweld</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
            <value>
                <fullName>Dorr-Oliver</fullName>
            </value>
            <value>
                <fullName>Flowserve</fullName>
            </value>
            <value>
                <fullName>Flygt Xylem</fullName>
                <label>Flygt/Xylem</label>
            </value>
            <value>
                <fullName>GIW</fullName>
            </value>
            <value>
                <fullName>GPM Inc.</fullName>
            </value>
            <value>
                <fullName>ITT Fabri-Valves</fullName>
            </value>
            <value>
                <fullName>ITT Goulds</fullName>
            </value>
            <value>
                <fullName>KGC</fullName>
            </value>
            <value>
                <fullName>Koshin</fullName>
            </value>
            <value>
                <fullName>Larox Valves</fullName>
            </value>
            <value>
                <fullName>Linatex</fullName>
            </value>
            <value>
                <fullName>Metso</fullName>
            </value>
            <value>
                <fullName>Multotec</fullName>
            </value>
            <value>
                <fullName>Murray-Latta</fullName>
            </value>
            <value>
                <fullName>Other (Please Specify)</fullName>
            </value>
            <value>
                <fullName>Rovalve</fullName>
            </value>
            <value>
                <fullName>S.P.R.S Specialty Products</fullName>
            </value>
            <value>
                <fullName>Schurco</fullName>
            </value>
            <value>
                <fullName>Toyo Pumps</fullName>
            </value>
            <value>
                <fullName>Tyco</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Warman</fullName>
            </value>
            <value>
                <fullName>Weir Ash</fullName>
            </value>
            <value>
                <fullName>Weir Cavex</fullName>
            </value>
            <value>
                <fullName>Weir Hazelton</fullName>
            </value>
            <value>
                <fullName>Wey</fullName>
                <label>Wey (Sistag)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>