force-app/main/default/objects/Opportunity/fields/Expected_Kickoff_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Kickoff_Meeting_Date__c</fullName>
    <description>as requested by Engineering</description>
    <inlineHelpText>Propose a date for the kickoff meeting. This will alert Inside Sales to help you set a date and send out the invitations. Inside Sales will update this date once invitations have been sent out.</inlineHelpText>
    <label>Expected Kickoff Meeting Date</label>
    <type>Date</type>
</CustomField>