force-app/main/default/objects/Opportunity/fields/Expected_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Ship_Date__c</fullName>
    <businessOwnerUser>mikew@welco.ca.traintest</businessOwnerUser>
    <description>Expected Ship Date or the day the customer requires the equipment as requested by Sales Team</description>
    <inlineHelpText>Expected ship date or date the customer requires the equipment.</inlineHelpText>
    <label>Expected Ship Date</label>
    <type>Date</type>
</CustomField>