force-app/main/default/objects/Opportunity/fields/Inside_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Rep__c</fullName>
    <inlineHelpText>Ties the Inside Sales member to the opportunity for information accuracy and accountability.</inlineHelpText>
    <label>Inside Sales Rep</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Carolina Arno</fullName>
            </value>
            <value>
                <fullName>Jessica Holt</fullName>
            </value>
            <value>
                <fullName>Marcel Rodriguez</fullName>
            </value>
            <value>
                <fullName>Tiffany Clark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>