force-app/main/default/objects/Opportunity/fields/Material_of_Gate__c.field-meta.xml
<CustomField>
    <fullName>Material_of_Gate__c</fullName>
    <description>lining of the gate</description>
    <label>Material of Gate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>17-4ph</fullName>
            </value>
            <value>
                <fullName>2205 Super Duplex</fullName>
            </value>
            <value>
                <fullName>316L</fullName>
            </value>
            <value>
                <fullName>C276 Hastelloy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>