force-app/main/default/objects/Opportunity/fields/Material_of_Seal__c.field-meta.xml
<CustomField>
    <fullName>Material_of_Seal__c</fullName>
    <description>valve seal material</description>
    <label>Material of Seal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Chlorobutyl</fullName>
            </value>
            <value>
                <fullName>Gum Rubber</fullName>
            </value>
            <value>
                <fullName>High Temp EPPM</fullName>
            </value>
            <value>
                <fullName>Neoprene</fullName>
            </value>
            <value>
                <fullName>Nitrile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>