force-app/main/default/objects/Opportunity/fields/Next_Step_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_DateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Next Step DateTime</label>
    <type>DateTime</type>
</CustomField>