force-app/main/default/objects/Opportunity/fields/Next_Step_Editor__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Editor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the individual who modified the next step</description>
    <label>NextStepEditor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>