force-app/main/default/objects/Opportunity/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <label>NextStepsList</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Send Quote</fullName>
            </value>
            <value>
                <fullName>Schedule Follow Up Task</fullName>
            </value>
            <value>
                <fullName>Waiting on Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>