force-app/main/default/objects/Opportunity/fields/NextStepEditorAlias__c.field-meta.xml
<CustomField>
    <fullName>NextStepEditorAlias__c</fullName>
    <defaultValue>$User.Alias</defaultValue>
    <description>Pull initials from Next Step Editor to Add to Previous Steps</description>
    <label>NextStepEditorAlias</label>
    <length>10</length>
    <type>Text</type>
</CustomField>