force-app/main/default/objects/Opportunity/fields/OldExpectedKickoffDate__c.field-meta.xml
<CustomField>
    <fullName>OldExpectedKickoffDate__c</fullName>
    <description>Holds prior value of kickoff date</description>
    <label>OldExpectedKickoffDate</label>
    <type>Date</type>
</CustomField>