force-app/main/default/objects/Opportunity/fields/Opportunity_Details__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Details__c</fullName>
    <inlineHelpText>Include a general description and the main application details.</inlineHelpText>
    <label>Opportunity Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>