force-app/main/default/objects/Opportunity/fields/Opportunity_Source__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Source__c</fullName>
    <label>Opportunity Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Referral</fullName>
            </value>
            <value>
                <fullName>Digital Advertising</fullName>
            </value>
            <value>
                <fullName>Eriez Orange Room</fullName>
            </value>
            <value>
                <fullName>Existing Business</fullName>
            </value>
            <value>
                <fullName>Magazine/Publication</fullName>
            </value>
            <value>
                <fullName>Phone/Email/Site Visit (Account Manager)</fullName>
            </value>
            <value>
                <fullName>Phone/Email (Inside Sales)</fullName>
            </value>
            <value>
                <fullName>President/VP Referral</fullName>
            </value>
            <value>
                <fullName>Supplier Referral</fullName>
            </value>
            <value>
                <fullName>Trade Show/Event</fullName>
            </value>
            <value>
                <fullName>Welco Campaigns</fullName>
            </value>
            <value>
                <fullName>Welco Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>