force-app/main/default/objects/Opportunity/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <description>Identifies whether the opportunity is for units or parts</description>
    <inlineHelpText>Parts opportunities do not require kickoff meetings.</inlineHelpText>
    <label>Opportunity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parts</fullName>
            </value>
            <value>
                <fullName>Units</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>