force-app/main/default/objects/Opportunity/fields/Opps_relationship_Map__c.field-meta.xml
<CustomField>
    <fullName>Opps_relationship_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opps relationship Map</label>
    <referenceTo>pqrm__Relationship_Map__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>