force-app/main/default/objects/Opportunity/fields/OtherCompetitors__c.field-meta.xml
<CustomField>
    <fullName>OtherCompetitors__c</fullName>
    <inlineHelpText>Enter the competitor we are replacing if the competitor is not found in the list above.</inlineHelpText>
    <label>Please Specify</label>
    <length>50</length>
    <type>Text</type>
</CustomField>