force-app/main/default/objects/Opportunity/fields/Pressure__c.field-meta.xml
<CustomField>
    <fullName>Pressure__c</fullName>
    <description>Pressure of valve as suggested by Inside Sales to know what to quote</description>
    <label>Pressure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>150 Psi (TG - Standard)</fullName>
            </value>
            <value>
                <fullName>300 Psi (TGH - High Pressure)</fullName>
            </value>
            <value>
                <fullName>740 Psi (TGHP - Extra High Pressure)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>