force-app/main/default/objects/Opportunity/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <businessOwnerUser>annat@welco.ca.traintest</businessOwnerUser>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Used to lookup to Contacts to select the primary contact/person for this opportunity.</description>
    <inlineHelpText>Primary contact for this opportunity and who the quote will be addressed to. Don&apos;t worry, you will be able to add more later.</inlineHelpText>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Primary Contact of These Opportunities</relationshipLabel>
    <relationshipName>PrimaryOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>