force-app/main/default/objects/Opportunity/fields/Primary_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Role__c</fullName>
    <description>Picklist allowing users to add the primary contact role for the opportunity</description>
    <label>Primary Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adversary</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>EPC</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
            <value>
                <fullName>Operator/Maintenance</fullName>
            </value>
            <value>
                <fullName>Planner</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Purchaser</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Supplier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>