force-app/main/default/objects/Opportunity/fields/Probability_Amount__c.field-meta.xml
<CustomField>
    <fullName>Probability_Amount__c</fullName>
    <description>Amount times probability</description>
    <formula>Amount *  Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probability Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>