force-app/main/default/objects/Opportunity/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <description>Vendor Reference Code for this Opportunity</description>
    <label>Quote Reference</label>
    <length>35</length>
    <type>Text</type>
</CustomField>