force-app/main/default/objects/Opportunity/fields/Sale_Type__c.field-meta.xml
<CustomField>
    <fullName>Sale_Type__c</fullName>
    <description>Used to identify if the sale type is regular or direct. Direct sales do not require kickoff meetings.</description>
    <inlineHelpText>Direct sales do not require kickoff meetings.</inlineHelpText>
    <label>Sale Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>