force-app/main/default/objects/Opportunity/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <businessOwnerUser>mikew@welco.ca.traintest</businessOwnerUser>
    <description>Serial Number when applicable for replacement valve as suggested by Inside Sales</description>
    <inlineHelpText>Serial Number, if applicable for replacement valve.</inlineHelpText>
    <label>Serial Number</label>
    <length>26</length>
    <type>Text</type>
</CustomField>