force-app/main/default/objects/Opportunity/fields/Size_of_Valve__c.field-meta.xml
<CustomField>
    <fullName>Size_of_Valve__c</fullName>
    <businessOwnerUser>mikew@welco.ca.traintest</businessOwnerUser>
    <description>Identifies the pipe size. Add to picklist as needed</description>
    <label>Size of Valve</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2&quot;</fullName>
            </value>
            <value>
                <fullName>3&quot;</fullName>
            </value>
            <value>
                <fullName>4&quot;</fullName>
            </value>
            <value>
                <fullName>6&quot;</fullName>
            </value>
            <value>
                <fullName>8&quot;</fullName>
            </value>
            <value>
                <fullName>10&quot;</fullName>
            </value>
            <value>
                <fullName>12&quot;</fullName>
            </value>
            <value>
                <fullName>14&quot;</fullName>
            </value>
            <value>
                <fullName>16&quot;</fullName>
            </value>
            <value>
                <fullName>18&quot;</fullName>
            </value>
            <value>
                <fullName>20&quot;</fullName>
            </value>
            <value>
                <fullName>22&quot;</fullName>
            </value>
            <value>
                <fullName>24&quot;</fullName>
            </value>
            <value>
                <fullName>26&quot;</fullName>
            </value>
            <value>
                <fullName>32&quot;</fullName>
            </value>
            <value>
                <fullName>36&quot;</fullName>
            </value>
            <value>
                <fullName>42&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>