force-app/main/default/objects/Opportunity/fields/Supplier_Order__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Order__c</fullName>
    <description>Hold Supplier Order Number for reference purposes 
E.g. Eriez Order Numbers</description>
    <inlineHelpText>Supplier Order Number for reference e.g. Eriez Order Number</inlineHelpText>
    <label>Supplier Order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>