force-app/main/default/objects/Opportunity/fields/Type_of_Placement__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Placement__c</fullName>
    <businessOwnerUser>accounting1@welco.ca.traintest</businessOwnerUser>
    <description>Based off of list from Krebs</description>
    <inlineHelpText>Existing (Spare/Stock/Rotatable) and Repair Replacement opportunities do not require kickoff meetings.</inlineHelpText>
    <label>Type of Placement</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Application</fullName>
            </value>
            <value>
                <fullName>Competitor Replacement</fullName>
            </value>
            <value>
                <fullName>Upgrade Existing</fullName>
            </value>
            <value>
                <fullName>Existing (Spare/Stock/Rotatable)</fullName>
            </value>
            <value>
                <fullName>Repair Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>