force-app/main/default/objects/Opportunity/fields/Units_Forecasting__c.field-meta.xml
<CustomField>
    <fullName>Units_Forecasting__c</fullName>
    <description>This field is for forecasting</description>
    <label>Units - Forecasting</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>