force-app/main/default/objects/Opportunity/fields/Welco_Order__c.field-meta.xml
<CustomField>
    <fullName>Welco_Order__c</fullName>
    <description>Welco order number from Adagio as requested by MD and JH to improve communications between shipping, inside sales and sales and know which opportunities ship dates would be related to.</description>
    <label>Welco Order #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>