force-app/main/default/objects/Opportunity/fields/Won_Amount__c.field-meta.xml
<CustomField>
    <fullName>Won_Amount__c</fullName>
    <description>Only count the amount if it&apos;s won</description>
    <formula>IF( IsWon=TRUE, Amount, 0)</formula>
    <label>Won Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>