force-app/main/default/objects/Opportunity/fields/WorkOrder__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Work Order associated with this Opportunity</description>
    <label>Related Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>