force-app/main/default/objects/Opportunity/validationRules/OPP001_Close_Date_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP001_Close_Date_Restriction</fullName>
    <active>false</active>
    <description>Data Integrity</description>
    <errorConditionFormula>AND( 
(ISPICKVAL( StageName , &quot;Negotiation/Review&quot; )),
( (TODAY() + 365) &lt; (CloseDate) ) )</errorConditionFormula>
    <errorDisplayField>CloseDate</errorDisplayField>
    <errorMessage>Error OPP001
If this opportunity is expected to close in over 12 months, please mark it as long term project.</errorMessage>
</ValidationRule>