force-app/main/default/objects/Opportunity/validationRules/OPP002_Competitor_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP002_Competitor_Required</fullName>
    <active>false</active>
    <description>Competitor is required if Type of Placement is Competitor Replacement</description>
    <errorConditionFormula>AND(
ISPICKVAL(Type_of_Placement__c,&quot;Competitor Replacement&quot;),
ISBLANK( TEXT(Competitor__c) ))</errorConditionFormula>
    <errorDisplayField>Competitor__c</errorDisplayField>
    <errorMessage>Error OPP001
Competitor is required.</errorMessage>
</ValidationRule>