force-app/main/default/objects/Opportunity/validationRules/OPP003_KickoffDateandRepmustbeeditedbyIS.validationRule-meta.xml
<ValidationRule>
    <fullName>OPP003_KickoffDateandRepmustbeeditedbyIS</fullName>
    <active>false</active>
    <description>Inside Sales, Engineering and Sys Admin has access to edit kickoff meeting dates</description>
    <errorConditionFormula>AND(

OR(
ISCHANGED(  Inside_Sales_Rep__c ),
ISCHANGED( Actual_Kickoff_Meeting_Date__c )
),

NOT(OR(
  $Profile.Id = &quot;00eE0000000n0Ip&quot;,
  $UserRole.Id = &quot;00E0L000000jRQC&quot;
))

)</errorConditionFormula>
    <errorDisplayField>Actual_Kickoff_Meeting_Date__c</errorDisplayField>
    <errorMessage>Error OPP003
The Actual Kickoff Meeting Date and assigned Inside Sales Rep can only be updated by an Inside Sales Rep.</errorMessage>
</ValidationRule>